[package]
name = "mm1-proto-sup"
version = "0.6.2"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = []
serde = ["dep:serde", "mm1-address/serde"]

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true

serde = {workspace = true, features = ["derive"], optional = true}
