[package]
name = "mm1-proto-sup"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true

serde = {workspace = true, features = ["derive"]}
